added seed data + fixed users view

--- a/BoardBloom/BoardBloom/Views/Users/UserProfile.cshtml
+++ b/BoardBloom/BoardBloom/Views/Users/UserProfile.cshtml
@@ -107,7 +107,7 @@
 		<h4>Acest utilizator nu are niciun bookmark.</h4>
 	</div>
 } else {
-    @foreach (var board in ViewBag.Boards)
+    @foreach (var board in ViewBag.Blooms)
     {
 
         <div class="card text-center mx-auto" style="max-width: 600px;">
@@ -186,34 +186,33 @@
                 width: fit-content;
             }
         </style>
-
-        @* Afisarea paginata *@
-        <div class="centered-div">
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link"
-                           href="@Url.Action("UserProfile", new { userId = Model.Id, page = 1 })" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                    @for (int i = 1; i <= ViewBag.lastPage; i++)
-                    {
-                        <li class="page-item">
-                            <a class="page-link"
-                               href="@Url.Action("UserProfile", new { userId = Model.Id, page = i })">@(i)</a>
-                        </li>
-                    }
-                    <li class="page-item">
-                        <a class="page-link"
-                           href="@Url.Action("UserProfile", new { userId = Model.Id, page = ViewBag.lastPage })" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
     }
+    @* Afisarea paginata *@
+    <div class="centered-div">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link"
+                       href="@Url.Action("UserProfile", new { userId = Model.Id, page = 1 })" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                @for (int i = 1; i <= ViewBag.lastPage; i++)
+                {
+                    <li class="page-item">
+                        <a class="page-link"
+                           href="@Url.Action("UserProfile", new { userId = Model.Id, page = i })">@(i)</a>
+                    </li>
+                }
+                <li class="page-item">
+                    <a class="page-link"
+                       href="@Url.Action("UserProfile", new { userId = Model.Id, page = ViewBag.lastPage })" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 }
 
 @functions {
