--- a/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
@@ -25,7 +25,7 @@
             @if (UserManager.GetUserId(User) == Model.User.Id)
             {
 
-                <a class="comment-edit-action" href="@Url.Action("Edit", "Comments", new { id = Model.Id })">
+                <a class="comment-edit-button" href="@Url.Action("Edit", "Comments", new { id = Model.Id })">
                     <p>Edit</p>
                 </a>
                 <form method="post" action="@Url.Action("Delete", "Comments", new { id = Model.Id })">
