--- a/BoardBloom/BoardBloom/wwwroot/css/Blooms/BloomShow.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/Blooms/BloomShow.css
@@ -3,6 +3,16 @@
     align-self: center;
 }
 
+.bloom-card:hover {
+    box-shadow: none !important;
+    background-color: var(--background-primary) !important;
+    cursor: default !important;
+}
+
+.bloom-card {
+    min-width: 450px;
+}
+
 .bloom-show {
     display: flex;
     flex-direction: row;
@@ -28,6 +38,20 @@
     height: 100%;
     flex: 1;
     min-width: 450px;
+}
+
+.bloom-comments-empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    width: 100%;
+    height: 100%;
+    padding: 16px;
+    background-color: var(--background-primary);
+    border-radius: 12px;
+    color: var(--content-primary);
+    font-size: 16px;
 }
 
 .bloom-comments {
