--- a/BoardBloom/BoardBloom/wwwroot/css/site.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/site.css
@@ -5,6 +5,7 @@
   --content-white: #f1f1f1;
   --background-primary: #ffffff;
   --background-secondary: #f4f3fb;
+  --bloom-gray: #c7c7c7;
 }
 
 body, html {
@@ -15,6 +16,12 @@ body, html {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  scrollbar-width: thin;
+  scrollbar-color: var(--accent-primary) var(--background-secondary);
+}
+
+main {
+  margin: 32px 0;
 }
 
 a {
