--- a/BoardBloom/BoardBloom/wwwroot/css/site.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/site.css
@@ -48,3 +48,17 @@ button:hover {
   color: var(--accent-primary);
   text-decoration: underline;
 }
+
+input, textarea {
+  border: none;
+  outline: none;
+  border-radius: 12px;
+  padding: 8px;
+  box-shadow: 2px 2px 10px var(--content-secondary);
+}
+
+input::focus, textarea::focus {
+  border: none;
+  outline: none;
+  box-shadow: 1px 1px 4px var(--accent-primary);
+}
