--- a/BoardBloom/BoardBloom/Views/Blooms/New.cshtml
+++ b/BoardBloom/BoardBloom/Views/Blooms/New.cshtml
@@ -1,38 +1,73 @@
 ﻿@model BoardBloom.Models.Bloom
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 <head>
     <link rel="stylesheet" href="~/css/Blooms/BloomNew.css" />
+    <script src="~/js/Bloom/BloomNew.js"></script>
 </head>
 
 <div class="new-bloom-wrapper">
     <h1 class="new-bloom-title">Spawn a new beautiful<br/><span class="new-bloom-title-span">Bloom</span></h1>
 
-    <form class="new-bloom-form" method="POST" action="@Url.Action("New", "Blooms")">
-        <input 
-            type="text" 
-            id="title" 
-            name="title" 
-            class="new-bloom-form-input" 
-            placeholder="Title"
-            required 
-        />
+    <div class="new-bloom-tabview">
+        <div class="new-bloom-tabview-buttons">
+            <button class="new-bloom-tabview-button new-bloom-tabview-button-active" onclick="openTab(0)">Image post</button>
+            <button class="new-bloom-tabview-button" onclick="openTab(1)">Text post</button>
+        </div>
 
-        <input 
-            type="text"
-            id="image" 
-            name="image"
-            class="new-bloom-form-input" 
-            placeholder="Image URL"
-            required 
-        />
+        <div class="new-bloom-forms-wrapper">
+            <div class="new-bloom-form" style="display: flex;">
+                <input 
+                    type="text"
+                    id="image" 
+                    name="image"
+                    class="new-bloom-form-input" 
+                    placeholder="Image URL"
+                    required 
+                />
 
-        <textarea
-            id="content" 
-            name="content"
-            class="new-bloom-form-textarea"
-            placeholder="Content"
-            required></textarea>
+                <textarea
+                    id="content" 
+                    name="content"
+                    class="new-bloom-form-textarea"
+                    placeholder="Content"
+                    required></textarea>
+                
+                <input type="hidden" name="userId" id="userId" value="@UserManager.GetUserId(User)" />
+                <input type="hidden" name="date" id="date" value="@DateTime.Now" />
+                <input type="hidden" name="title" id="title" value="placeholder_text" />
+                <button class="new-bloom-form-submit" onclick="nextStep()">Preview</button>
+            </div>
+            
+            <div class="new-bloom-form" style="display: none;">
+                <input 
+                    type="text" 
+                    id="title" 
+                    name="title" 
+                    class="new-bloom-form-input" 
+                    placeholder="Title"
+                    required 
+                />
 
-        <button class="new-bloom-form-submit" type="submit">Create</button>
-    </form>
+                <textarea
+                    id="content" 
+                    name="content"
+                    class="new-bloom-form-textarea"
+                    placeholder="Content"
+                    required></textarea>
+                
+                <input type="hidden" name="userId" id="userId" value="@UserManager.GetUserId(User)" />
+                <input type="hidden" name="date" id="date" value="@DateTime.Now" />
+                <input type="hidden" name="image" id="image" value="placeholder_image" />
+                <button class="new-bloom-form-submit" onclick="nextStep()">Preview</button>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="preview-area" style="display: none;">
+    </div>
 </div>
