--- a/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_CommentPartial.cshtml
@@ -1,4 +1,5 @@
 @model BoardBloom.Models.Comment
+
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
@@ -25,7 +26,7 @@
             @if (UserManager.GetUserId(User) == Model.User.Id)
             {
 
-                <a class="comment-edit-button" href="@Url.Action("Edit", "Comments", new { id = Model.Id })">
+                <a class="comment-edit-button" href="@Url.Action("EditComm", "Blooms", new { commId = Model.Id })">
                     <p>Edit</p>
                 </a>
                 <form method="post" action="@Url.Action("Delete", "Comments", new { id = Model.Id })">
